# CodeCompass

./: .gitignore  README.md  pyproject.toml
evaluation/retrieval/: metrics.py  run_eval.py  test_cases.py
scripts/: chunker.py  test_setup.py  validate_test_cases.py
src/codecompass/: cli.py  config.py
src/codecompass/indexing/: chunker.py  store.py
src/codecompass/llm/: ollama.py
src/codecompass/retrieval/: rag.py  search.py
tests/: test_chunker.py  test_ollama.py  test_store.py
