[project]
name = "codecompass"
version = "0.1.0"
description = "AI-powered repository onboarding assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
    
    # LLM & Embeddings
    "ollama>=0.5.4",
    
    # Vector Store
    "lancedb>=0.6.0",
    "pyarrow>=15.0.0",
    
    # AST Parsing
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    
    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
codecompass = "codecompass.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codecompass"]

[tool.ruff]
line-length = 100
target-version = "py310"
